--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -61,6 +61,6 @@
 			<a href='/view?key={{ c.key }}'>{{ c.name }}</a>
 			{% endfor %}
 		</section>
-		(% endif %}
+		{% endif %}
 	</body>
 </html>
