--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -22,8 +22,13 @@
 				</fieldset>
 				</br>
 				<fieldset>
+					<label>Password:
+						<input type="password" name="password_input" size="30" maxlength="100"/>
+					</label>
+				</fieldset>
+				<fieldset>
 					<label>Phone Number:
-						<input type="number" name="phone_input" size="30" maxlength="100">
+						<input type="text" name="phone_input" size="30" maxlength="100">
 					</label>
 					</br>
 					<label>Phone Type:
