--- a/assignment2/view.html
+++ b/assignment2/view.html
@@ -9,7 +9,7 @@
 		<p>Email: {{ email }}
 		<p>Password: {{ password}}
 		<p>Phone Number: {{ phone }} {{ phone_type }}
-		<p>Sports: 
+		<p>Sports: {{ sports }}
 		<form action="/" method="post">
 			
 		</form>
