--- a/assignment2/view.html
+++ b/assignment2/view.html
@@ -9,7 +9,7 @@
 		<p>Email: {{ email }}
 		<p>Password: {{ password}}
 		<p>Phone Number: {{ phone }} {{ phone_type }}
-		<p>Sports: {% s in sports %} {{ s }} {% endfor %}
+		<p>Sports: {% for s in sports %} {{ s }} {% endfor %}
 		<form action="/" method="post">
 			
 		</form>
