--- a/assignment2/view.html
+++ b/assignment2/view.html
@@ -11,7 +11,8 @@
 		<p>Phone Number: {{ phone }} {{ phone_type }}
 		<p>Sports: {% for s in sports %} {{ s }} {% endfor %}
 		<form action="/" method="post">
-			
+			<input type="hidden" name="action" value="edit_customer">
+			<input type="hidden" name="key" value="{{ key }}">
 		</form>
 		<a href='/'>Back</a>
 	</body>
