--- a/assignment2/view.html
+++ b/assignment2/view.html
@@ -13,6 +13,7 @@
 		<form action="/" method="post">
 			<input type="hidden" name="action" value="edit_customer">
 			<input type="hidden" name="key" value="{{ key }}">
+			<input type="submit" value="Edit">
 		</form>
 		<a href='/'>Back</a>
 	</body>
