--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -11,25 +11,25 @@
 				<legend>Customer Information</legend>
 				<fieldset>
 					<label>Name:
-						<input type="text" name="name_input" size="30" maxlength="100"/>
+						<input type="text" name="name_input" size="30" maxlength="100" value="{{ cust_name }}"/>
 					</label>
 				</fieldset>
 				</br>
 				<fieldset>
 					<label>Email:
-						<input type="email" name="email_input" size="30" maxlength="100"/>
+						<input type="email" name="email_input" size="30" maxlength="100" value="{{ cust_email }}"/>
 					</label>
 				</fieldset>
 				</br>
 				<fieldset>
 					<label>Password:
-						<input type="password" name="password_input" size="30" maxlength="100"/>
+						<input type="password" name="password_input" size="30" maxlength="100" value="{{ cust_pwd }}"/>
 					</label>
 				</fieldset>
 				</br>
 				<fieldset>
 					<label>Phone Number:
-						<input type="text" name="phone_input" size="30" maxlength="100">
+						<input type="text" name="phone_input" size="30" maxlength="100" value="{{ cust_phone }}">
 					</label>
 					</br>
 					<label>Phone Type:
