--- a/assignment2/view.html
+++ b/assignment2/view.html
@@ -10,10 +10,8 @@
 		<p>Password: {{ password}}
 		<p>Phone Number: {{ phone }} {{ phone_type }}
 		<p>Sports: {% for s in sports %} {{ s.name }} {% endfor %}
-		<form action="/edit?key={{ key}}" method="get">
-			
-			<input type="submit" value="Edit">
-		</form>
+		<a href='/edit?key={{ key }}'>Edit</a>
+		</br>
 		<a href='/'>Back</a>
 	</body>
 </html>
